# mockdown

./: .gitignore  Demo-Obsolete.ipynb  Demo.ipynb  LICENSE  MANIFEST.in  Pipfile  README.md  ScoringAndLearning.ipynb  mypy.ini  setup.cfg  setup.py
etc/: 1x1-fixed-ltr_centered-x_aspectratio-4-3.json  1x1-fixed_ltwh.json  1x2_fixed-ltwh.json  2x1_fixed-ltrb_equal-wh.json  ScoringAndLearning.ipynb  fixedmargins.json
fixtures/: 2-2-boxes.json  2-boxes.json  3-2-boxes.json  3-boxes.json
fixtures/ieee/: index.html
mockdown/: app.py  cli.py  constrainable.py  daikon.py  datalog.py  engine.py  foo.py  logic.py  mockdown.pl  typing.py  view.py  visibility.py
mockdown/constraint/: __init__.py  constants.py  constraint.py  factory.py  typing.py  validation.py
mockdown/display/: constrainable.py  constraint.py  util.py  view.py  visibility.py
mockdown/heuristic/: visibility.py
mockdown/instantiation/: __init__.py  engine.py  typing.py  visibility.py
mockdown/integration/: __init__.py  kiwi.py  z3.py
mockdown/logic/: __init__.py  mockdown.pl
mockdown/model/: __init__.py  anchor.py  attribute.py  bounds.py  conformance.py  edge.py  typing.py  view.py
mockdown/pruning/: __init__.py  blackbox.py  conformance.py  typing.py  util.py
src/: Learning.ipynb  MANIFEST.in
src/mockdown/: app.py  cli.py  engine.py  run.py  timeout.py  types.py  typing.py
static/demo/: demo.json  index.html  style.css  style.css.map  style.scss
stubs/: stopit.pyi  sympy.pyi
stubs/sympy/: __init__.pyi  (+1 more)
tests/: test_builder.py  test_instantiation.py  test_learning.py  test_loader.py
(+99 files in other folders)
